--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -39,6 +39,10 @@ button:hover {
     color: #858487;
 }
 
+section.grey {
+    background: #f9f9f9;
+}
+
 .intro, .traffic {
     .bordered {
         border-bottom: 1px solid #d6cece;
