--- a/app/styles/service.scss
+++ b/app/styles/service.scss
@@ -74,10 +74,27 @@
 	}
 
 	.brands-row {
+		.certificates {
+		    position: absolute;
+		    top: 50%;
+		    &.left {
+		      left: 0;
+		      transform: rotate(270deg);
+		    }
+
+		    &.right {
+		      right: 0;
+		      transform: rotate(90deg);
+		    }
+		  }
+		li {
+			display: inline-block;
+			padding: 25px;
+		}
 		text-align: center;
 		img {
 			max-height: 100px;
-
+    		max-width: 200px;
 		}
 	}
 
